--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -9,6 +9,7 @@
     <script src="bower_components/jsonpatch/lib/jsonpatch.js"></script>
     <script src="bower_components/lodash/dist/lodash.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-lodash/angular-lodash.js"></script>
     <!--script src="bower_components/oauth2-extensions/lib/oauth2.js"></script-->
 
