--- a/firefox/data/freedom-page-worker.html
+++ b/firefox/data/freedom-page-worker.html
@@ -5,7 +5,7 @@
     <script src="scripts/socket_firefox.js"></script>
     <script src="scripts/view_oauth.js"></script>
     <script src="scripts/plumbing.js"></script>
-    <script src="common/freedom/freedom.js" data-manifest="common/backend/uproxy.json">{"strongIsolation": true, "stayLocal": true, "debug": false}</script>
+    <script src="common/freedom/freedom.js" data-manifest="common/backend/uproxy.json">{"strongIsolation": true, "stayLocal": true, "debug": true}</script>
      <script src="scripts/freedom_shim_freedom.js"></script>
      <script>
        freedomShim.addCommunicator(addon.port);
