--- a/common/ui/popup.html
+++ b/common/ui/popup.html
@@ -73,6 +73,7 @@
           </div>
         </ul>
         </section>
+
         <div id="contact-details" ng-show="rosterNudge">
           <div class="client-details" ng-repeat="client in currentContact.clients">
             {{ client.clientId }}
@@ -81,14 +82,42 @@
             <br>
             Status: {{ client.status }}
             <div class="client-actions">
-              <button class="btn"
-                  ng-show="currentContact.userId in cannotGetFrom"
-                  ng-click="sendMessage(currentContact, 'request-access')">
-                Request
-              </button>
-              <button class="btn">
-                Grant
-              </button>
+              <div class="box-for-proxy"
+                  ng-switch="client.permissions.proxy">
+                <button class="btn"
+                    ng-switch-when="yes"
+                    ng-click="startAccess(client)">
+                  Start
+                </button>
+                <div ng-switch-when="requested">
+                  <button class="btn" ng-click="client.permissions.proxy='no'">
+                    Cancel
+                  </button>
+                  <span>Pending...</span>
+                </div>
+                <button class="btn"
+                    ng-switch-default
+                    ng-click="requestAccess(client)">
+                  Request
+                </button>
+              </div>
+
+              <div class="box-for-client"
+                  ng-switch="client.permissions.client">
+                <button class="btn"
+                    ng-switch-when="yes">
+                  Revoke Access
+                </button>
+                <div ng-switch-when="requested">
+                  <button ng-click="grantAccess(client)">
+                    Grant
+                  </button>
+                  <button class="btn" ng-click="freedomEmit('ignore', contact.userId)">
+                    Ignore
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
 
           <!--
