--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -52,10 +52,11 @@
     <h4>Contacts</h4>
     <div id="contacts-frame">
       <ul class="contacts">
-        <li ng-repeat="contact in model.contacts">
+        <li ng-repeat="contact in model.roster">
+          <h4>{{ contact.name }}</h4>
           <ul class="clients">
             <li ng-repeat="client in contact.clients">
-              <h5>{{client.clientName}}</h5>
+              <h5>{{ client.clientId }} </h5>
               <div style="margin-left: 15px">
                 <label class="checkbox inline">
                   <input type="checkbox" ng-model="client.hasClientPermission">
