make login or logout status on G+ more clear. still debugging

--- a/common/ui/options.html
+++ b/common/ui/options.html
@@ -40,13 +40,13 @@
       <button class="btn btn-mini active" ng-show="isOnline('loopback')"
             ng-click="logout('loopback')">Loop</button>
       <button class="btn btn-danger btn-mini" ng-show="!isOnline('google')"
-            ng-click="login('google')">G+</button>
+            ng-click="login('google')">Login G+</button>
       <button class="btn btn-danger btn-mini active" ng-show="isOnline('google')"
-            ng-click="logout('google')">G+</button>
+            ng-click="logout('google')">Logout G+</button>
       <button class="btn btn-primary btn-mini" ng-show="!isOnline('facebook')"
-            ng-click="login('facebook')">FB</button>
+            ng-click="login('facebook')">Login FB</button>
       <button class="btn btn-primary btn-mini active" ng-show="isOnline('facebook')"
-            ng-click="logout('facebook')">FB</button>
+            ng-click="logout('facebook')">Logout FB</button>
     </div>
 
     <h4>Contacts</h4>
